# FreeMyCode

./: .CMakelists.txt.swp  .gitignore  CMakeLists.txt  FreeMyCode_cmd - Copie.sln  README.md
Documentation/: .~lock.FreeMyCode_Wiki.odt#  FreeMyCode_Wiki.odt
FreeMyCode/: Command_Line_parser.h  ConfigTools.cpp  FreeMyCode.vcxproj  FreeMyCode.vcxproj.filters  LoggingTools.h
FreeMyCode/Sources/: Config.json  FreeMyCode.cpp  Secondary input.json  Secondary_input.json
FreeMyCode/Sources/Utils/: Command_Line_parser.cpp  Command_Line_parser.h  ConfigTools.cpp  ConfigTools.h  DirectoryAnalyser.h  FormattingUtils.h  LicenseWriter.cpp  LicenseWriter.h  LoggingTools.cpp  LoggingTools.h
FreeMyCode_cmd/: Command_Line_parser.cpp  Config.json  ConfigTools.cpp  ConfigTools.h  DirectoryAnalyser.cpp  FreeMyCode_cmd.cpp  FreeMyCode_cmd.vcxproj  FreeMyCode_cmd.vcxproj.filters  LoggingTools.cpp  PathUtils.h  stdafx.h
FreeMyCode_cmd/json/: json.h
Install/Ressources/Spectrums/: BSD-2-Clause.spec  PublicDomain.spec
Install/Scripts/Dummy_Directory/: Secondary_input.json  Toto - Copie.py  toto.h  toto.html  toto.vb  toto.yaml
Install/Scripts/Dummy_Directory/subfolder/: toto - Copie.html  toto.h
Install/Scripts/Dummy_Directory/subfolder/deepfolder/extra-deepfolder/: toto.c
Install/Scripts/Multi-Platform/: LaunchFreeMyCode.py
Install/Scripts/Windows/: Test.bat
Install/Scripts/Windows/BinaryTestersScripts/: parseSpectrum.bat
Releases/V1RC-alpha-x86/Windows/Win32/Ressources/Spectrums/: Apache-2.0.spec
Releases/V1RC-alpha-x86/Windows/Win32/Scripts/Multi-Platform/: TestBashInputs.py
Releases/V1RC-alpha-x86/Windows/Win32/Scripts/Windows/BinaryTestersScripts/: DetectCommentSections.bat  FindLicenseInFile.bat
Ressources/: Config.json  Secondary_input.json
Ressources/AvailableLicenses/: LGPL-2.0.txt  LGPL-2.1.txt  LGPL-3.0.txt
Ressources/Spectrum files/: Test.spec  Test_Wrong.spec
Ressources/Spectrums/: BSD-3-Clause.spec  GNU GPL V2.spec  GPL-2.0.spec  GPL-3.0.spec  LGPL-2.0.spec  LGPL-2.1.spec  LGPL-3.0.spec  MIT.spec  MPLv2.spec
Ressources/Spectrums_generated/: AvailableLicenses.spec  DummyLicense.spec  GNU GPL V3.spec  MIT_header.spec
Scripts/: Backup_Dummy_Directory.tgz
Scripts/Debuggers/: GDB_commandFile.sh
Scripts/DummyUserDir/: License.txt
Scripts/Dummy_Directory/: toto.c  toto.h
Scripts/Linux/: TestMyCode.sh
Scripts/Linux/BinaryTestersScripts/: DetectCommentSections.sh  FindLicenseInFile.sh  buildSpectrum.bat  parseSpectrum.bat
Scripts/Multi-Platform/: LaunchFreeMyCode.py  TestBashInputs.py
Scripts/Multi-Platform/FreeMyCode_python_utils/: logging_tools.py  path_utils.py  system_utils.py
Scripts/Windows/: TestMyCode.bat  Test_Help.bat  Test_Usage.bat
Scripts/Windows/BinaryTestersScripts/: parseLicenseAndWriteSpec.bat  parseSpectrum.bat
Sources/: CMakeLists.txt  FreeMyCode.cpp
Sources/PrecompiledHeaders/: CMakeLists.txt  stdafx.cpp  stdafx.h  targetver.h
Sources/ThirdPartyLibs/: CMakeLists.txt
Sources/ThirdPartyLibs/rapidjson/: CMakeLists.txt
Sources/Utils/: CMakeLists.txt
Sources/Utils/BinaryTesters/: CMakeLists.txt  testLicenseChecker.cpp  testPathUtils.cpp
Sources/Utils/Includes/: CommandLineParser.h  CommandLineParser_PublicTypes.h  Command_Line_parser.h  ConfigTools.h  DirectoryAnalyser.h  ErrorTypes.h  FormattingUtils.h  LicenseChecker.h  LicenseWriter.h  LoggingTools.h  ParsingUtils.h  PathUtils.h
Sources/Utils/Sources/: CommandLineParser.cpp  CommandLineParser_PublicTypes.cpp  Command_Line_parser.cpp  ConfigTools.cpp  DirectoryAnalyser.cpp  FormattingUtils.cpp  LicenseChecker.cpp  LicenseWriter.cpp  LoggingTools.cpp  ParsingUtils.cpp  PathUtils.cpp
Tests utils/: TestMyCode.bat
Tests utils/Dummy_Directory/: Config.json  Secondary_input.json
UserRessourcesDir/: FreeMyCode_secondary_input.json.backup  License.txt
VisualStudio/: FreeMyCode.sln
test_src/: encodings.h
